1. Updated the name of the SDK

--- a/jwccgateapp/app/build.gradle
+++ b/jwccgateapp/app/build.gradle
@@ -7,7 +7,8 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.jukshio.jwccgateapp"
+//        applicationId "com.jukshio.jwccgateapp"
+        applicationId "com.vishwam.cameraSdk"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
