--- a/jwccgateapp/settings.gradle
+++ b/jwccgateapp/settings.gradle
@@ -1,3 +1,3 @@
-include ':jwccgateapplib'
+include ':vishwamcameralib'
 include ':app'
-rootProject.name = "JwccGateApp"
+rootProject.name = "VishwamCameraApp"
