--- a/VishwamCameraApp/vishwamcameralib/build.gradle
+++ b/VishwamCameraApp/vishwamcameralib/build.gradle
@@ -31,10 +31,14 @@ android {
 dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.google.android.gms:play-services-vision:11.0.4'
+
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
     implementation "com.microsoft.appcenter:appcenter-analytics:3.3.1"
     implementation "com.microsoft.appcenter:appcenter-crashes:3.3.1"
